[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingview_ta_lib"
version = "0.0.1"
authors = [
  { name="Andrei Kuminov", email="akumidv@yahoo.com" },
]
description = "Tradingview ta lib implementation for python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords=["technical analysis", "trading", "python3", "pandas"]

[project.urls]
"Homepage" = "https://github.com/akumidv/tradingview-ta-lib"
"Bug Tracker" = "https://github.com/akumidv/tradingview-ta-lib/issues"
